@@ -1,3 +1,11 @@
+2008-06-06  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Colin Walters <walters@verbum.org>
+
+	* src/applet.c
+		- (status_icon_activate_cb, status_icon_popup_menu_cb): clear any
+			notification when the user clicks on the applet icon
+
 2008-06-05  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
